# processwarp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: CMakeLists.txt  Doxyfile  Makefile  basic_operator.cpp  basic_operator.hpp  builtin_bit.cpp  builtin_bit.hpp  builtin_glfw3.cpp  builtin_glfw3.hpp  builtin_libc.cpp  builtin_libc.hpp  builtin_memory.cpp  builtin_memory.hpp  builtin_overflow.cpp  builtin_overflow.hpp  builtin_posix.cpp  builtin_posix.hpp  builtin_va_arg.cpp  builtin_va_arg.hpp  builtin_warp.cpp  builtin_warp.hpp  callinfo.hpp  controller.cpp  controller.hpp  convert.cpp  convert.hpp  data_store.cpp  data_store.hpp  definitions.hpp  error.cpp  error.hpp  finally.cpp  finally.hpp  func_store.cpp  func_store.hpp  instruction.hpp  interrupt.hpp  interrupt_memory_require.cpp  interrupt_memory_require.hpp  intrinsic_bit.cpp  (+53 more)
src/android/: .gitignore
src/android/app/: build.gradle  proguard-rules.pro
src/android/app/src/androidTest/java/org/processwarp/android/: ApplicationTest.java
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/aidl/org/processwarp/android/: ControllerInterface.aidl  FrontendInterface.aidl  GuiInterface.aidl  RouterInterface.aidl  WorkerInterface.aidl
src/android/app/src/main/assets/: frame.html
src/android/app/src/main/java/org/processwarp/android/: CommandPacket.java  ConnectDialogFragment.java  ControllerActivity.java  FrontendActivity.java  FrontendActivity0.java  FrontendActivity1.java  FrontendActivity2.java  FrontendReceiver.java  GuiActivity.java  GuiActivity0.java  GuiActivity1.java  GuiActivity2.java  GuiReceiver.java  MainActivity.java  Module.java  Router.java  RouterService.java  (+8 more)
src/android/app/src/main/jni/: Android.mk  Application.mk  jni_util.hpp  router_jni.cpp  router_jni.h  worker_jni.cpp  worker_jni.h
src/android/app/src/main/res/layout/: activity_contoller.xml  activity_frontend.xml  activity_gui.xml  activity_main.xml  dialog_connect.xml
src/android/app/src/main/res/menu/: menu_controller.xml  menu_main.xml
src/android/app/src/main/res/values/: strings.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/const/: CMakeLists.txt  core_log.tsv  daemon_log.tsv  definition.json  loader_log.tsv  module.json  nid.json  packet_error.json  packet_mode.json  pid.json
src/core/: CMakeLists.txt  Makefile  basic_operator.cpp  basic_operator.hpp  builtin_bit.cpp  builtin_bit.hpp  builtin_glfw3.cpp  builtin_glfw3.hpp  builtin_gui.cpp  builtin_gui.hpp  builtin_libc.cpp  builtin_libc.hpp  builtin_memory.cpp  builtin_memory.hpp  builtin_overflow.cpp  builtin_overflow.hpp  builtin_posix.cpp  builtin_posix.hpp  builtin_va_arg.cpp  builtin_va_arg.hpp  builtin_warp.cpp  builtin_warp.hpp  callinfo.hpp  connector.cpp  connector.hpp  constant_vm.hpp  convert.cpp  convert.hpp  data_store.cpp  data_store.hpp  definitions.hpp  dynamic_library.cpp  dynamic_library.hpp  endless_order_id.cpp  endless_order_id.hpp  error.cpp  error.hpp  finally.cpp  finally.hpp  format.cpp  (+59 more)
src/daemon/: CMakeLists.txt  connector.cpp  connector.hpp  constant_native.hpp  controller_listener.cpp  controller_listener.hpp  controller_pipe.cpp  controller_pipe.hpp  daemon.cpp  daemon.hpp  daemon_define.hpp  frontend_connector.cpp  frontend_connector.hpp  listener.cpp  listener.hpp  network_connector.cpp  network_connector.hpp  packet_init_webrtc_offer.cpp  packet_init_webrtc_offer.hpp  pipe.cpp  pipe.hpp  pipe_bundler.cpp  pipe_bundler.hpp  router.cpp  router.hpp  routing.cpp  routing.hpp  server_connector.cpp  server_connector.hpp  subprocess.cpp  subprocess.hpp  webrtc_bundle.cpp  webrtc_bundle.hpp  webrtc_connector.cpp  webrtc_connector.hpp  webrtc_edge.cpp  webrtc_edge.hpp  webrtc_subprocess.cpp  webrtc_subprocess.hpp  worker.cpp  (+11 more)
src/electron/: config.json  configure.json  controller.html  frame.html  gui.html  gui.js  gui_c.js  gui_helper.js  icon.css  index.html  main.js  package.json  packet_controller.js
src/lib/: picojson.h
src/loader/: CMakeLists.txt  llvm_asm_loader.cpp  llvm_util.cpp  llvm_util.hpp  loader.cpp
src/net/: constant_net.hpp
src/net/webrtc/: CMakeLists.txt  routing.cpp  routing.hpp  server_connector.cpp  server_connector.hpp  webrtc_bundle.cpp  webrtc_bundle.hpp  webrtc_connector.cpp  webrtc_edge.hpp
src/sample/: glfw.bc  glfw.c  hello1.c  hello2.bc  hello2.c  hello2.json  hello2.ll  hello3.c  hello3.json  hello4.bc  hello4.c  hello4.ll  hello5.bc  hello5.c  hello5.ll  hello7.bc  hello7.c  hello7.ll  hellopp1.bc  llvm.cpp  lua.bc  lua.ll  rogue.bc  rogue.ll  simple1.bc  struct.ll
test/: CMakeLists.txt
test/core/: test_alloca.bc  test_alloca.c  test_alloca.ll  test_arg.bc  test_arg.c  test_arg.ll  test_atexit.bc  test_atexit.c  test_atexit.ll  test_bsearch.bc  test_bsearch.c  test_bsearch.ll  test_compare.bc  test_compare.c  test_compare.ll  test_env.c  test_icmp.bc  test_icmp.c  test_icmp.ll  test_va_arg.bc  test_va_arg.c  test_va_arg.ll
test/emscripten/core/: test_i32_mul_precise.in  test_i32_mul_semiprecise.in
test/emscripten/core/ll/: closebitcasts.ll  fnmatch.ll  stack_overflow.ll  test_addr_of_stacked.ll  test_alloca.ll  test_alloca_stack.ll  test_array2.ll  test_array2b.ll  test_assert.ll  test_atexit.ll  test_atoX.ll  test_atomic.ll  test_atomic_cxx.ll  test_bigarray.ll  test_bitfields.ll  test_bsearch.ll  test_bswap64.ll  test_class.ll  test_constglobalstructs.ll  test_conststructs.ll  test_copyop.ll  test_corruption_2.ll  test_corruption_3.ll  test_cxx03_do_run.ll  test_direct_string_constant_usage.ll  test_dlmalloc_partial_2.ll  test_double_i64_conversion.ll  test_double_varargs.ll  test_dynamic_cast.ll  test_dynamic_cast_2.ll  test_dynamic_cast_b.ll  test_emptyclass.ll  test_erf.ll  test_errar.ll  test_exceptions_2.ll  test_exceptions_alias.ll  test_exceptions_convert.ll  test_exceptions_destroy_virtual.ll  test_exceptions_multi.ll  test_exceptions_primary.ll  (+159 more)
test/script/: emscripten_core.rb
test/unit/: CMakeLists.txt  test_convert.cpp
test/unit/core/: CMakeLists.txt  test_convert.cpp  test_node_id.cpp  test_util.cpp
(+91 files in other folders)
